--- a/common.css
+++ b/common.css
@@ -8,9 +8,10 @@
 
 a {
     color: inherit;
+    text-decoration: none;
 }
 
-a:hover, a:active {
+a:hover, a:active, a:visited {
     text-decoration: none;
     color: inherit;
 }
@@ -54,7 +55,7 @@ a:hover, a:active {
 .input-text, textarea {
     border: 1px solid #fff;
     height: 40px;
-    font-size: 129%;
+    font-size: 110%;
     padding: 0 15px;
     color: #92a79c;
     margin: 5px 0;
