--- a/media-queries.css
+++ b/media-queries.css
@@ -1,3 +1,50 @@
-@media only screen and (max-width: 1238px) {
+@media only screen and (max-width: 1150px) {
+    body {
+        font-size: 14px;
+    }
 
+    .block {
+        padding: 15px;
+    }
+
+    .block-body {
+        padding: 0;
+    }
+
+    .aboutus-container {
+        padding: 15px 30px;
+    }
+
+    .map-container {
+        padding: 15px 0;
+    }
+
+    .google-map {
+        height: 360px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    body {
+        font-size: 12px;
+    }
+
+    .google-map {
+        height: 250px;
+        width: 90%;
+    }
+
+    .input-text, textarea, button {
+        width: 100%;
+    }
+
+    .footer {
+        padding: 15px;
+        line-height: 16px;
+    }
+
+    .input-text, button {
+        height: 30px;
+        padding: 0 15px;
+    }
 }
